--- a/KafkaProject.csproj
+++ b/KafkaProject.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.5.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.13" />
   </ItemGroup>
 
 
